--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body{
     border-left: 3px dashed gray;
 }
 .app_main_work_experience_container{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin-top: 30px;
     width: 100%;
 }
@@ -85,7 +85,7 @@ body{
 
 /*app_main_other_projects start*/
 .app_main_other_projects_container{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin-top: 20px;
     width: 100%;
 }
@@ -117,7 +117,7 @@ body{
     border-left: 3px dashed grey;
 }
 .app_main_education_container{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin-top: 40px;
     width: 100%;
 }
@@ -144,7 +144,7 @@ body{
 
 /*app_main_language start*/
 .app_main_language_container{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin-top: 60px;
     width: 100%;
 }
@@ -157,7 +157,7 @@ body{
 
 
 .app_main_language_parag{
-    margin-top: 7px;
+    margin-top: 30px;
     list-style-type: none;
 }
 /*app_main_language end*/
@@ -165,7 +165,7 @@ body{
 
 /*app_main_skills start*/
 .app_main_skills_container{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin-top: 30px;
     width: 100%;
 }
